@@ -1,0 +1,6 @@
+package me.tomski.shop;
+
+
+public class MainShop {
+    //TODO main shop, access block chooser, block buyer, custom item buyer
+}
